# libpointmatcher

./: CHANGELOG.rst  CMakeLists.txt  CatkinBuild.cmake  ColconBuild.cmake  TODO  create_debian_ws.sh  package.xml
cmake/: configExtras.cmake
debian/: changelog  libpointmatcher-dev.install
examples/: build_map.cpp  icp_advance_api.cpp
examples/data/: default-convert.yaml  default-identity.yaml  default.yaml
examples/data/icp_data/: defaultBoundingBoxDataPointsFilter.yaml  defaultDistanceLimitDataPointsFilter.yaml  defaultIdentityDataPointsFilter.yaml  defaultPointToPlaneMinDistDataPointsFilter.yaml  defaultRemoveNaNDataPointsFilter.yaml
examples/data/unit_tests/: badIcpConfig_InvalidModuleType.yaml  badIcpConfig_InvalidParameter.yaml
examples/icp_tutorial/: icp_tutorial_cfg.yaml
pointmatcher/: DataPoints.cpp  DataPointsFiltersImpl.h  ErrorMinimizer.cpp  ErrorMinimizersImpl.h  ICP.cpp  IO.cpp  IO.h  InspectorsImpl.cpp  InspectorsImpl.h  MatchersImpl.cpp  MatchersImpl.h  PointMatcher.h  Registry.cpp  TransformationCheckersImpl.cpp  TransformationCheckersImpl.h  TransformationsImpl.cpp  TransformationsImpl.h
pointmatcher/DataPointsFilters/: NormalSpace.cpp  OctreeGrid.cpp  OctreeGrid.h
pointmatcher/ErrorMinimizers/: PointToPlane.cpp  PointToPlane.h  PointToPoint.cpp  PointToPointSimilarity.cpp
pointmatcher/testing/: utils_transformations.cpp
utest/: utest.cpp  utest.h
utest/ui/: DataFilters.cpp  DataPoints.cpp  ErrorMinimizers.cpp  IO.cpp  Matcher.cpp  Outliers.cpp  Transformations.cpp
utest/ui/icp/: GeneralTests.cpp
(+2 files in other folders)
