<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>libpointmatcher</name>
  <version>1.3.25</version>
  <description>libpointmatcher is a modular ICP library, useful for robotics and computer vision.</description>
  <author email="f.pomerleau@gmail.com">Francois Pomerleau</author>
  <maintainer email="magostinucci@anybotics.com">Mathieu Agostinucci</maintainer>
  <maintainer email="gzhou@anybotics.com">Guoxiang Zhou</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/anybotics/libpointmatcher</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>libnabo</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>libnabo</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <test_depend condition="$ROS_VERSION == 1">gtest</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
